--- a/Blazor.Wasm.UI/wwwroot/index.html
+++ b/Blazor.Wasm.UI/wwwroot/index.html
@@ -7,6 +7,7 @@
     <title>Blazor.Wasm.UI</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="Blazor.Wasm.UI.styles.css" rel="stylesheet" />
 </head>
@@ -19,6 +20,7 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
+    <script src="_content/MatBlazor/dist/matBlazor.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
